ocpdev-255bx/workloads/myapp/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: welcome-php
  name: welcome-php
  namespace: myapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: welcome-php
status:
  loadBalancer: {}
