ocpdev-255bx/workloads/myapp/myapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: welcome-php
    app.kubernetes.io/instance: myapp
  name: welcome-php
  namespace: myapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: welcome-php
    weight: 100
status: {}
